Settings page added, UI extending off screen fixed

--- a/frontend/src/components/ArcadeScoreboard.css
+++ b/frontend/src/components/ArcadeScoreboard.css
@@ -25,21 +25,21 @@
 }
 
 .screen-bezel {
-  height: 100%;
+  height: 98%;
   background: #111;
-  padding: 20px;
+  padding: 0px;
   border-radius: 15px;
   border: 8px solid #444;
   box-shadow: inset 0 0 20px rgba(0, 0, 0, 0.5);
 }
 
 .screen {
-  height: 100%;
+  height: 93%;
   background: #000;
   color: #0f0;
   font-family: 'Press Start 2P', cursive;
   padding: 20px;
-  border-radius: 5px;
+  border-radius: 10px;
   position: relative;
   overflow: hidden;
   display: flex;
